WIP: adapting TrancacionPendienteAv from di-commons

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 spring:
   application:
     name: avro-tutorial
+kafka:
+  retro-topic: trn-tickets-retro
+  reprocess-topic: trn-tickets-retro-reprocess
+  bootstrap-servers: localhost:9092
+  consumer:
+    concurrency: 3
+    poll-timeout: 3000
+    max-poll-records: 3000
+    batch-listener: true
